k8s/apps/base/jellyfin/mirakurun/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mirakurun
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: mirakurun
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mirakurun
  ports:
    - name: http
      port: 40772
      targetPort: http
      protocol: TCP
