k8s/apps/base/jellyfin/mirakurun/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mirakurun
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: mirakurun
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mirakurun.internal.kentaro1043.com
      secretName: mirakurun-tls
  rules:
    - host: mirakurun.internal.kentaro1043.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mirakurun
                port:
                  name: http
